# canary-api

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  ecs-proxies-containers.yml  ecs-proxies-deploy-sandbox.yml  ecs-proxies-deploy.yml  manifest.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.api/: manifest.yml
.api/environments/: internal-dev-sandbox.yml  internal-dev.yml  internal-qa.yml
.github/: README.md  dependabot.yml
.github/scripts/: grype_json_to_csv.py
.github/workflows/: continous-integration-workflow.yaml  pr-lint.yaml  sbom.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml  skeleton-pipeline.yml
azure/templates/: custom-manual-approval.yml  e2e.yml
docker/: Dockerfile  Makefile  app.js  package-lock.json  package.json
e2e/: Makefile  pyproject.toml
e2e/tests/: api_tests.py
products/: application-restricted-higher-ratelimit.yml  application-restricted.yml  user-restricted-higher-ratelimit.yml  user-restricted.yml
proxies/live/apiproxy/policies/: AssignMessage.503ServiceUnavailable.xml  AssignMessage.AddPayloadToPing.xml  AssignMessage.MagicResponse.xml  AssignMessage.QuotaData.xml  AssignMessage.QuotaPerAppErrorMessage.xml  AssignMessage.QuotaPerProxyErrorMessage.xml  AssignMessage.Status200.xml  FlowCallout.ApplyRateLimiting.xml  (+14 more)
proxies/sandbox/apiproxy/: canary.xml
scripts/: calculate_version.py  generate_examples.py
scripts/githooks/: scan-secrets.sh
specification/: canary-api.yaml
terraform/: main.tf
(+8 files in other folders)
