[tool.poetry]
name = "canary-api"
version = "0.0.1-alpha"
description = "The Canary API is used for testing internal processes"
package-mode = false

license = "MIT"

authors = [
    "API management"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/canary-api"
homepage = "https://github.com/NHSDigital/canary-api"

keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.3"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0"
gitpython = "^3.1.44"
requests = "^2.32.5"
urllib3 = "^2.6.3"
authlib = "1.6.6"


[tool.poetry.group.dev.dependencies] 
flake8 = "^7.3.0"
black = "^25.1.0"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
pytest = "^8.3.5"
coverage = "^7.8.0"
pytest-nhsd-apim = "^5.0.0"


[tool.poetry.scripts]
